src/test/deca/context/valid/Objet/Minus-Field.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    float x;
}

class B {
    float x;
}

{
    A a = new A();
    B b = new B();
    print(a.x - b.x);
}